--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jogo de cobrinha</title>
+    <link rel="sheetstyle" href="./style.css"/>
+    <script defer src="./script.js"></script>
 </head>
 <body>
-    <canvas id="shack" width="512" height="512"></canvas>
+    <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
