--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Jaylan Esquivel">
     <title>jogo de cobrinha</title>
-    <link rel="sheetstyle" href="./style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
     <script defer src="./script.js"></script>
 </head>
 <body>
+    <h1>Jogo da Cobrinha</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
